# studyflow-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VERSION_LOG.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: help_content.py  main.py  ui.py
app/adapters/: __init__.py  facade.py
app/components/: chat_panel.py  diagnostics_center.py  dialogs.py  exports_center.py  help_center.py  help_view.py  history_view.py  inspector.py  layout.py  library_panel.py  library_view.py  nav.py  plugins_center.py  recent_activity_view.py  result_viewer.py  settings_center.py  shell.py  sidebar.py  tasks_center.py  workbench_view.py  workflow_wizard.py
app/pages/: 0_Help.py  1_Courses.py  2_Papers.py  3_Presentations.py
app/screens/: assistant.py  courses.py  dashboard.py  library.py  research.py  settings.py  tools.py
app/ui/: __init__.py  auto_refresh.py  components.py  i18n.py  labels.py  layout.py  locks.py  pages_create.py  pages_help.py  pages_library.py  pages_start.py  pages_tools.py  state.py  theme.py
backend/: __init__.py  api.py  schemas.py
cli/: main.py
cli/commands/: api.py  asset.py  bundle_cmd.py  clean_cmd.py  coach.py  concepts_cmd.py  doctor.py  document.py  gen.py  import_cmd.py  index.py  ingest.py  migrate_cmd.py  pack_cmd.py  plugins.py  query.py  related_cmd.py  tasks_cmd.py  workspace.py
core/: version.py
core/agents/: course_agent.py  paper_agent.py  paper_aggregator.py  slides_agent.py
core/assets/: __init__.py  citations.py  diff.py  store.py
core/bundle/: __init__.py  exporter.py  importer.py  manifest.py  sanitizer.py
core/coach/: __init__.py  coach_agent.py  protocol.py  store.py
core/concepts/: __init__.py  builder.py  schema.py  search.py  store.py
core/config/: loader.py  schema.py
core/domains/: __init__.py  course.py  research.py  timetable.py  todo.py
core/formatting/: citations.py
core/index_assets/: __init__.py  generator.py  store.py
core/indexing/: planner.py  sync.py
core/ingest/: chunker.py  cite.py  document_reader.py  ocr.py  pdf_reader.py  pdf_render.py
core/llm/: client.py
core/packs/: __init__.py  exam_pack.py  manifest.py  related_pack.py  slides_pack.py
core/parsing/: metadata.py
core/plugins/: __init__.py  base.py  registry.py
core/prompts/: coach_prompts.py  concepts_prompts.py  course_prompts.py  instructions.py  paper_prompts.py  registry.py  related_prompts.py  slides_prompts.py
core/quality/: __init__.py  citations_check.py  validators.py
infra/: db.py  models.py
scripts/: cleanup_workspaces.py  create_demo_pdf.py  real_flow_attention.py  real_flow_v0_0_3.py  real_flow_v0_1.py  verify_release_v2_10.py  verify_ui_app.py  verify_ui_app_v2.py  verify_ui_app_v2_9.py  verify_ui_polish.py  verify_ui_quality.py  verify_ui_refactor.py  verify_v0_0_1.py  verify_v0_0_2.py  verify_v0_0_3.py  verify_v0_1.py  verify_v0_1_1.py  verify_v0_1_2.py  verify_v0_2.py  verify_v1_0.py  verify_v1_3.py  verify_v2_2.py  verify_v2_3.py  verify_v2_4.py  verify_v2_5.py  verify_v2_8.py  verify_v3_release.py
service/: api_mode_adapter.py  asset_service.py  bundle_service.py  chat_service.py  coach_service.py  concepts_service.py  course_service.py  course_v3_service.py  document_service.py  ingest_service.py  metadata_service.py  pack_service.py  paper_generate_service.py  paper_service.py  presentation_service.py  rag_service.py  recent_activity_service.py  related_service.py  research_v3_service.py  retrieval_service.py  summary_service.py  tasks_service.py  ui_facade.py  workspace_service.py
tests/: test_api_endpoints.py  test_assets_diff.py  test_assets_versioning.py  test_bm25_hybrid.py  test_bundle_roundtrip.py  test_chunker.py  test_cite.py  test_coach_guard.py  test_coach_store.py  test_concepts_incremental.py  test_concepts_store.py  test_config.py  test_e2e_minimal.py  test_mode_adapter.py  test_ocr_pipeline.py  test_pack_generation.py  test_plugins_registry.py  test_prompts_registry.py  test_related_manager.py  test_zotero_parser.py
(+33 files in other folders)
