[project]
name = "studyflow-ai"
version = "0.0.1"
description = "StudyFlow-AI V0.0.1 skeleton"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "chromadb>=0.5.5",
  "pymupdf>=1.24.5",
  "requests>=2.31.0",
  "sentence-transformers>=2.7.0",
  "streamlit>=1.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "app",
  "app.pages",
  "app.components",
  "core",
  "core.ingest",
  "core.retrieval",
  "core.llm",
  "core.llm.providers",
  "infra",
  "service",
]
